--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>The Cat</title>
+<title>Pet Paw</title>
 <meta charset="UTF-8">
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
 <link rel="stylesheet" type="text/css" href="css/styles.css">
